# modern-synthetic-data-platform

./: .env.example  .gitignore  LICENSE  PROJECT_CHARTER.md  README.md  ROADMAP.md  pyproject.toml
docs/: fabric-setup.md
docs/adr/: 0001-gold-layer-star-schema.md
src/synthetic_data_platform/: app.py  cli.py  config.py  constants.py
src/synthetic_data_platform/commands/: generate.py  transform.py  validate.py
src/synthetic_data_platform/generators/: agent_generator.py  claim_generator.py  customer_generator.py  faker_utils.py  payment_generator.py  policy_generator.py  sources.py
src/synthetic_data_platform/models/: agent.py  claim.py  customer.py  dim_agent.py  dim_customer.py  dim_date.py  fact_claim.py  fact_payment.py  fact_policy.py  payment.py  policy.py
src/synthetic_data_platform/services/: gold_service.py  validation_service.py
src/synthetic_data_platform/telemetry/: models.py  service.py
tests/: test_app.py  test_cli.py  test_config.py  test_customer_generator.py
tests/integration/: test_transform_pipeline.py  test_validate_pipeline.py
tests/smoke/: test_cli_smoke.py
tests/unit/: test_agent.py  test_agent_generator.py  test_app.py  test_claim.py  test_claim_generator.py  test_cli.py  test_customer.py  test_dim_agent.py  test_dim_customer.py  test_dim_date.py  test_fact_claim.py  test_fact_payment.py  test_fact_policy.py  test_gold_service.py  test_logging.py  test_parquet_writer.py  test_payment.py  test_payment_generator.py  test_policy.py  test_policy_generator.py  test_sources.py  test_telemetry.py  test_validation_service.py
(+3 files in other folders)
