[project]
name = "synthetic-data-platform"
version = "0.1.0"
description = "A modern, open-source Python platform that generates realistic enterprise datasets for demonstrating data engineering concepts, modern software architecture, and Microsoft Fabric best practices."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "typer>=0.15.1",
    "pydantic>=2.10.3",
    "polars>=1.17.1",
    "pyarrow>=18.1.0",
    "rich>=13.9.4",
]

[project.scripts]
synthetic-data = "synthetic_data_platform.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synthetic_data_platform"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.4",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
